--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,5 +14,5 @@ jobs:
     - uses: actions/checkout@v1
     - name: Export glossary notes to TXT format
       run: |
-        ls -la,
+        cd packet-storm/documentation,
         /bin/bash ./export.sh.
