--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@master
     - name: Export glossary notes to TXT format
+      shell: bash
       run: |
         cd packet-storm/documentation,
         /bin/bash ./export.sh.
