--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-#    - uses: actions/checkout@master
+    - uses: actions/checkout@master
     - name: Export glossary notes to TXT format
       shell: bash
       run: |
