--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,5 @@ jobs:
     - uses: actions/checkout@master
     - name: Export glossary notes to TXT format
       shell: bash
-      run: /home/runner/work/packet-storm/packet-storm/documentation/export.sh
+#      run: /home/runner/work/packet-storm/packet-storm/documentation/export.sh pentest-glossary.ctb
+      run: /home/runner/work/packet-storm/packet-storm/documentation/export.sh pentest-notizen.ctb
