--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ jobs:
       run: >-
         sudo apt update
         sudo apt install xvfb
-        wget https://launchpad.net/~giuspen/+archive/ubuntu/ppa/+files/cherrytree_0.99.46-1_amd64.deb
-        dpkg -i cherrytree*.deb
+        wget https://launchpad.net/~giuspen/+archive/ubuntu/ppa/+files/cherrytree_0.99.46-1_amd64.deb -o cherrytree.deb
+        sudo dpkg -i cherrytree.deb
     - name: Export glossary notes to TXT format
       shell: bash
       run: /home/runner/work/packet-storm/packet-storm/documentation/export.sh pentest-notizen.ctb
