--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       shell: bash
       run: >-
         sudo apt update
-        sudo apt install xvfb
+        sudo apt install xvfb -y
         wget https://launchpad.net/~giuspen/+archive/ubuntu/ppa/+files/cherrytree_0.99.46-1_amd64.deb -o cherrytree.deb
         sudo dpkg -i cherrytree.deb
     - name: Export glossary notes to TXT format
