--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@master
     - name: Install essentials
       shell: bash
-      run: >-
+      run: |
         sudo apt update
         sudo apt install xvfb -y
         wget https://launchpad.net/~giuspen/+archive/ubuntu/ppa/+files/cherrytree_0.99.46-1_amd64.deb -o cherrytree.deb
