--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       shell: bash
       run: |
         sudo apt update
-        sudo apt install xvfb -y
+        sudo apt install xvfb libgtkmm-3.0-1v5 libgtksourceviewmm-3.0-0v5 libxml++2.6-2v5 libgspell-1-1 libatkmm-1.6-1v5 libcairomm-1.0-1v5 libglibmm-2.4-1v5 mime-support libpangomm-1.4-1v5 libsigc++-2.0-0v5  -y
         wget https://launchpad.net/~giuspen/+archive/ubuntu/ppa/+files/cherrytree_0.99.46-1_amd64.deb -O cherrytree.deb
         sudo dpkg -i cherrytree.deb
     - name: Export glossary notes to TXT format
