--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,22 +7,20 @@ on:
       - master
 
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@master
-    - name: Install essentials
-      shell: bash
-      run: |
-        sudo apt update
-        sudo apt install xvfb libgspell-1-common libenchant1c2a libgtkmm-3.0-1v5 libgtksourceviewmm-3.0-0v5 libxml++2.6-2v5 libatkmm-1.6-1v5 libcairomm-1.0-1v5 libglibmm-2.4-1v5 mime-support libpangomm-1.4-1v5 libsigc++-2.0-0v5 -y
-        wget http://ftp.de.debian.org/debian/pool/main/g/gspell/libgspell-1-1_1.6.1-2_amd64.deb -O libgspell.deb
-        sudo dpkg -i libgspell.deb
-        wget https://launchpad.net/~giuspen/+archive/ubuntu/ppa/+files/cherrytree_0.99.46-1_amd64.deb -O cherrytree.deb
-        sudo dpkg -i cherrytree.deb || exit 1
-    - name: Export glossary notes to TXT format
-      uses: GabrielBB/xvfb-action@v1
-      with:
-        run: ./devops/convert-ctb.sh documentation/pentest-glossary.ctb /tmp
-        working-directory: /home/runner/work/packet-storm/packet-storm/
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: derstolz/packet-storm:latest
