--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
+          file: {context}/devops/Dockerfile
           push: true
           tags: derstolz/packet-storm:latest
