--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -1,25 +1,26 @@
 FROM ubuntu:latest
 
 ENV PACKET_STORM_HOME="/packet-storm"
-ENV PACKET_STORM_DOCS="$PACKET_STORM_HOME/documentation"
-ENV NGINX_DOCS_PATH="/var/www/html/packet-storm-docs"
+ENV PACKET_STORM_DOCS="$PACKET_STORM_HOME/docs"
 
 RUN apt update && \
     apt install software-properties-common -y && \
     add-apt-repository ppa:giuspen/ppa && \
     apt update || exit 1 && \
-    apt install xvfb cherrytree nginx -y && \
-    mkdir "$NGINX_DOCS_PATH" && \
+    apt install python3 python3-pip xvfb cherrytree -y && \
     mkdir "$PACKET_STORM_HOME"
 
-EXPOSE 80
 
 WORKDIR "$PACKET_STORM_DOCS"
+COPY docs "$PACKET_STORM_DOCS"
+COPY devops/scripts/convert-ctb.sh "$PACKET_STORM_DOCS"
 
-COPY documentation "$PACKET_STORM_DOCS"
-COPY devops/convert-ctb.sh "$PACKET_STORM_DOCS"
-RUN /bin/bash convert-ctb.sh pentest-glossary.ctb "$NGINX_DOCS_PATH/glossary"
+COPY devops/scripts/docs-parse.py "$PACKET_STORM_HOME"
+COPY devops/scripts/requirements.txt "$PACKET_STORM_HOME"
 
-COPY devops/entrypoint.sh "$PACKET_STORM_HOME"
+RUN pip3 install -r "$PACKET_STORM_HOME/requirements.txt"
 
-ENTRYPOINT ["/bin/bash", "/packet-storm/entrypoint.sh"]
+RUN /bin/bash convert-ctb.sh pentest-glossary.ctb "output"
+
+WORKDIR "$PACKET_STORM_HOME"
+ENTRYPOINT ["/bin/python3", "docs-parse.py", "-ed", "docs/output"]
