--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,32 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions-ecosystem/action-get-latest-tag@v1
+        id: get-latest-tag
+      - uses: actions-ecosystem/action-bump-semver@v1
+        id: bump-semver
+        with:
+          current_version: ${{ steps.get-latest-tag.outputs.tag }}
+          level: minor
+      - uses: actions-ecosystem/action-push-tag@v1
+        with:
+          tag: ${{ steps.bump-semver.outputs.new_version }}
+          message: '${{ steps.bump-semver.outputs.new_version }}: PR #${{ github.event.pull_request.number }} ${{ github.event.pull_request.title }}'
+
+      - uses: actions/checkout@v2
+      - run: zip -r Cybersecurity.zip ./docs/Cybersecurity
+      - uses: actions/upload-artifact@v3
+        with:
+          name: Cybersecurity-docs
+          path: Cybersecurity.zip
+
+      - uses: ncipollo/release-action@v1
+        with:
+          artifacts: "Cybersecurity.zip"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ steps.bump-semver.outputs.new_version }}
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -24,4 +50,4 @@ jobs:
         with:
           file: ./Dockerfile
           push: true
-          tags: cyberhexe/packet-storm:latest
+          tags: cyberhexe/packet-storm:${{ steps.bump-semver.outputs.new_version }}
