--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
       - master
 
 jobs:
-  docker:
+  build-n-release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
