--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,9 +44,15 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
+      - name: Build and push the version
         uses: docker/build-push-action@v2
         with:
           file: ./Dockerfile
           push: true
           tags: cyberhexe/packet-storm:${{ steps.bump-semver.outputs.new_version }}
+      - name: Build and push the latest version
+        uses: docker/build-push-action@v2
+        with:
+          file: ./Dockerfile
+          push: true
+          tags: cyberhexe/packet-storm:latest
